fixed scrollbar in empty list

--- a/src/megalist-multiselect.less
+++ b/src/megalist-multiselect.less
@@ -22,7 +22,7 @@
     overflow: hidden;
     .megalist {
         float: left;
-        width: 300px;
+        width: 285px;
         input[type=text] {
             .box-sizing(border-box);
             width: 100% !important;
